# PDFToolkit

./: .env.example  .gitignore  02-marker.py  04-colqwen-only.py  04-llama-only.py  AGENTS.md  CLAUDE.md  CODEMAP.md  README.md  TOOLS.md  pyproject.toml
eval/: README.md  __init__.py  run_eval.py
eval/tools/: __init__.py  got_ocr.py  internvl.py  mineru.py  nanonets.py  olmocr.py  paddleocr.py  qwen_vl.py
pdftoolkit/: __init__.py  benchmark.py  cli.py  clients.py  utils.py
pdftoolkit/providers/: __init__.py  analyze.py  convert.py
src/: 04-colqwen-search.py  04-llama+colqwen.py  05-ollama-llama.py  06-markitdown.py  07-mistral.py
tests/: __init__.py  test_benchmark.py  test_cli.py  test_clients.py  test_security.py  test_utils.py
